[gd_scene load_steps=7 format=3 uid="uid://dlxdtfes4r0w1"]

[ext_resource type="Script" path="res://scripts/chest/chest.gd" id="1_7lty6"]
[ext_resource type="Texture2D" uid="uid://bl1inb1vr8031" path="res://assets/decoration/Chests.png" id="2_88qe1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pqaul"]
size = Vector2(26, 20)

[sub_resource type="Animation" id="Animation_ce1k7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0l347"]
resource_name = "opening"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h5vpa"]
_data = {
"RESET": SubResource("Animation_ce1k7"),
"opening": SubResource("Animation_0l347")
}

[node name="Chest" type="Area2D"]
collision_layer = 64
collision_mask = 4
script = ExtResource("1_7lty6")
items_dropable = Array[String](["heart", "experience"])

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_88qe1")
hframes = 5
vframes = 7

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-8, 3)
shape = SubResource("RectangleShape2D_pqaul")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h5vpa")
}

[node name="DropTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DropTimer" to="." method="_on_drop_timer_timeout"]
